--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.clouway</groupId>
-    <artifactId>Servlets</artifactId>
+    <artifactId>servlets</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>task2</module>
-    </modules>
-    <name>Servlets Maven Webapp</name>
+    <name>servlets Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
 
@@ -35,6 +32,6 @@
 
     </dependencies>
     <build>
-        <finalName>Servlets</finalName>
+        <finalName>servlets</finalName>
     </build>
 </project>
