--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>7.6.1.v20120215</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.30</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>servlets</finalName>
